# rotorpy

./: .gitignore  LICENSE.md  README.md  TODO  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: publish_to_pypi.yml  testing_workflow.yml
examples/: ardupilot_basic_interface.py  ardupilot_imu_interface.py  basic_usage.py  basic_usage_px4.py  basic_usage_raptor.py  basic_usage_with_ardupilot.py  batched_simulation.py  benchmark_batched_simulation.py  gymnasium_basic_usage.py  multimav_multiprocessing_demo.py  parallel_data_collection.py  ppo_hover.py  ppo_hover_eval.py  ppo_hover_train.py  ppo_hover_train_vec.py  ppo_traj_train_vec.py  wind_filter_example.py
rotorpy/: README.md  batch_simulate.py  environments.py  simulate.py  test_batched_env_render.py  world.py
rotorpy/controllers/: README.md  controller_template.py  quadrotor_control.py  raptor.py
rotorpy/data_out/: .gitignore
rotorpy/estimators/: wind_ukf.py
rotorpy/learning/: learning_utils.py  quadrotor_environments.py  quadrotor_reward_functions.py  quadrotor_vec_environments.py
rotorpy/sensors/: imu.py  range_sensors.py
rotorpy/trajectories/: README.md  circular_traj.py  hover_traj.py  lissajous_traj.py  minsnap.py  polynomial_traj.py  speed_traj.py  traj_template.py
rotorpy/utils/: animate.py  axes3ds.py  numpy_encoding.py  occupancy_map.py  plotter.py  shapes.py  trajgen_utils.py
rotorpy/vehicles/: ardupilot_multirotor.py  batched_multirotor.py  crazyflie_params.py  crazyfliebrushless_params.py  hummingbird_params.py  multirotor.py  px4_multirotor.py
rotorpy/vehicles/px4_params/: __init__.py  sihsim_quadx.py
rotorpy/wind/: batched_wind.py  default_winds.py  dryden_utils.py  dryden_winds.py
tests/: benchmark_batched_simulation.py  benchmark_trajectory_generation.py  test_batched_sim_speed.py  test_batched_sims.py  test_batched_simulation.py  test_controllers.py  test_env.py  test_estimators.py  test_examples.py  test_gymenv.py  test_multirotor.py  test_new_hat_map.py  test_sensors.py  test_trajectories.py  test_utils.py  test_winds.py
