[project]
name = "rotorpy"
version = "1.2.0"
description = "A multirotor simulator with aerodynamics for education and research."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }
keywords = ["drone", "uav", "quadrotor", "multirotor", "aerodynamics", "simulation", "controls", "robotics", "estimation"]  # Optional
authors = [
    { name = "Spencer Folk", email = "sfolk@seas.upenn.edu" } 
]
maintainers = [
    { name = "Spencer Folk", email = "sfolk@seas.upenn.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    'cvxopt',
    'matplotlib',
    'numpy',
    'scipy',
    'pandas',
    'tqdm',
    'gymnasium',
    'timed_count' # Only for ardupilot sitl example
]

[project.optional-dependencies]
learning = [
    'stable_baselines3'
]
dev = [
    'pytest',
    'filterpy == 1.4.5',
]
testing = [
    'pytest',
    'filterpy == 1.4.5',
]
filter = [
    'filterpy == 1.4.5',
]

[project.urls]
"Homepage" = "https://github.com/spencerfolk/rotorpy"
"Bug Reports" = "https://github.com/spencerfolk/rotorpy/issues"
"Source" = "https://github.com/spencerfolk/rotorpy"


[build-system]
requires = ["setuptools>=44.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rotorpy", "rotorpy.*"]
[tool.setuptools]
